Bug 427043 - Usage log and system information cannot be saved to a file
Summary: Usage log and system information cannot be saved to a file
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: File formats (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: Android Android 10.x
: NOR normal
Target Milestone: ---
Assignee: sh_zam
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-09-27 18:03 UTC by Anna Medonosova
Modified: 2020-09-28 07:35 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Anna Medonosova 2020-09-27 18:03:12 UTC
SUMMARY
In 5.0.0 39f51c6, usage log and system information for bug reports cannot be saved.

STEPS TO REPRODUCE
1. Open Help -> Show system information for bug reports, or Show Krita Log for bug reports 
2. Click 'Save to file'
3. Select a directory to save to

OBSERVED RESULT
The operation fails silently. There is a file in the target directory with size of 0B.

EXPECTED RESULT
The log file is saved.
Comment 1 sh_zam 2020-09-28 07:27:54 UTC
Git commit 2126ed008d2664d86ba55ee4fba866580c850312 by Sharaf Zaman.
Committed on 28/09/2020 at 06:39.
Pushed by dkazakov into branch 'krita/4.3'.

Bugfix: usage logging could not be saved to a file on Android

When we use native dialog and create a file, Android
immediately creates the file albeit being zero bytes.
So, when writing QFile::copy first checks if the file
exists or not, which it does, therefore failing silently.

M  +13   -12   plugins/extensions/buginfo/dlg_buginfo.cpp

https://invent.kde.org/graphics/krita/commit/2126ed008d2664d86ba55ee4fba866580c850312
Comment 2 Dmitry Kazakov 2020-09-28 07:29:29 UTC
Git commit a9b045c28c47b3207da604839a0ff6f091197561 by Dmitry Kazakov, on behalf of Sharaf Zaman.
Committed on 28/09/2020 at 07:29.
Pushed by dkazakov into branch 'master'.

Bugfix: usage logging could not be saved to a file on Android

When we use native dialog and create a file, Android
immediately creates the file albeit being zero bytes.
So, when writing QFile::copy first checks if the file
exists or not, which it does, therefore failing silently.

M  +13   -12   plugins/extensions/buginfo/dlg_buginfo.cpp

https://invent.kde.org/graphics/krita/commit/a9b045c28c47b3207da604839a0ff6f091197561
Comment 3 Dmitry Kazakov 2020-09-28 07:35:02 UTC
Git commit 34a04383b61dc9a218bc2ab050e2fefd492b336e by Dmitry Kazakov, on behalf of Sharaf Zaman.
Committed on 28/09/2020 at 07:34.
Pushed by dkazakov into branch 'krita/4.4.0'.

Bugfix: usage logging could not be saved to a file on Android

When we use native dialog and create a file, Android
immediately creates the file albeit being zero bytes.
So, when writing QFile::copy first checks if the file
exists or not, which it does, therefore failing silently.

M  +13   -12   plugins/extensions/buginfo/dlg_buginfo.cpp

https://invent.kde.org/graphics/krita/commit/34a04383b61dc9a218bc2ab050e2fefd492b336e