Bugfix: usage logging could not be saved to a file on Android

When we use native dialog and create a file, Android
immediately creates the file albeit being zero bytes.
So, when writing QFile::copy first checks if the file
exists or not, which it does, therefore failing silently.

BUG:427043